force-app/main/default/objects/Part_Selector__c/Part_Selector__c.object-meta.xml
<CustomObject>
    <label>Part Selector</label>
    <nameField>
        <label>Part Selector Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Part Selectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>