force-app/main/default/objects/Part_Selector__c/fields/ASSEMBLYWT__c.field-meta.xml
<CustomField>
    <fullName>ASSEMBLYWT__c</fullName>
    <label>ASSEMBLYWT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>