force-app/main/default/objects/Part_Selector__c/fields/ASSEMBLYWTUOM__c.field-meta.xml
<CustomField>
    <fullName>ASSEMBLYWTUOM__c</fullName>
    <label>ASSEMBLYWTUOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>