force-app/main/default/objects/Part_Selector__c/fields/ASSYPARTNODESC__c.field-meta.xml
<CustomField>
    <fullName>ASSYPARTNODESC__c</fullName>
    <label>ASSYPARTNODESC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>