force-app/main/default/objects/Part_Selector__c/fields/ATEX__c.field-meta.xml
<CustomField>
    <fullName>ATEX__c</fullName>
    <description>ATEX Certification</description>
    <label>ATEX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>