force-app/main/default/objects/Part_Selector__c/fields/ATTRTEMPLATE__c.field-meta.xml
<CustomField>
    <fullName>ATTRTEMPLATE__c</fullName>
    <label>ATTRTEMPLATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>