force-app/main/default/objects/Part_Selector__c/fields/BCT__c.field-meta.xml
<CustomField>
    <fullName>BCT__c</fullName>
    <label>BCT</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>