force-app/main/default/objects/Part_Selector__c/fields/BEC__c.field-meta.xml
<CustomField>
    <fullName>BEC__c</fullName>
    <label>BEC</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>