force-app/main/default/objects/Part_Selector__c/fields/BoltingClassDesc__c.field-meta.xml
<CustomField>
    <fullName>BoltingClassDesc__c</fullName>
    <label>BoltingClassDesc</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>