force-app/main/default/objects/Part_Selector__c/fields/BoltPattern__c.field-meta.xml
<CustomField>
    <fullName>BoltPattern__c</fullName>
    <label>BoltPattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>