force-app/main/default/objects/Part_Selector__c/fields/CaseMatl__c.field-meta.xml
<CustomField>
    <fullName>CaseMatl__c</fullName>
    <label>CaseMatl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>