force-app/main/default/objects/Part_Selector__c/fields/CHAR_TEMPLATE__c.field-meta.xml
<CustomField>
    <fullName>CHAR_TEMPLATE__c</fullName>
    <label>CHAR_TEMPLATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>