force-app/main/default/objects/Part_Selector__c/fields/COMPINVSERTRK__c.field-meta.xml
<CustomField>
    <fullName>COMPINVSERTRK__c</fullName>
    <label>COMPINVSERTRK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>