force-app/main/default/objects/Part_Selector__c/fields/COMPRESPONID__c.field-meta.xml
<CustomField>
    <fullName>COMPRESPONID__c</fullName>
    <label>COMPRESPONID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>