force-app/main/default/objects/Part_Selector__c/fields/CUSTOMS_STAT_NO__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMS_STAT_NO__c</fullName>
    <label>CUSTOMS_STAT_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>