force-app/main/default/objects/Part_Selector__c/fields/CutAngle__c.field-meta.xml
<CustomField>
    <fullName>CutAngle__c</fullName>
    <label>CutAngle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>