force-app/main/default/objects/Part_Selector__c/fields/CUTR__c.field-meta.xml
<CustomField>
    <fullName>CUTR__c</fullName>
    <description>CU TR Compliance (Y/blank)</description>
    <label>CUTR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>