force-app/main/default/objects/Part_Selector__c/fields/CycleTimerCode__c.field-meta.xml
<CustomField>
    <fullName>CycleTimerCode__c</fullName>
    <label>CycleTimerCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>