force-app/main/default/objects/Part_Selector__c/fields/Diagram_Override__c.field-meta.xml
<CustomField>
    <fullName>Diagram_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change made to a configurator drawing</label>
    <type>Checkbox</type>
</CustomField>