force-app/main/default/objects/Part_Selector__c/fields/DimC_Override__c.field-meta.xml
<CustomField>
    <fullName>DimC_Override__c</fullName>
    <label>DimC Override</label>
    <length>18</length>
    <type>Text</type>
</CustomField>