force-app/main/default/objects/Part_Selector__c/fields/DimE_Override__c.field-meta.xml
<CustomField>
    <fullName>DimE_Override__c</fullName>
    <label>DimE Override</label>
    <length>18</length>
    <type>Text</type>
</CustomField>