force-app/main/default/objects/Part_Selector__c/fields/Drawing_id_override__c.field-meta.xml
<CustomField>
    <fullName>Drawing_id_override__c</fullName>
    <label>Drawing id override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>