force-app/main/default/objects/Part_Selector__c/fields/DRAWINGREV__c.field-meta.xml
<CustomField>
    <fullName>DRAWINGREV__c</fullName>
    <label>DRAWINGREV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>