force-app/main/default/objects/Part_Selector__c/fields/DripTrapCode__c.field-meta.xml
<CustomField>
    <fullName>DripTrapCode__c</fullName>
    <label>DripTrapCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>