force-app/main/default/objects/Part_Selector__c/fields/ENGPARTREV__c.field-meta.xml
<CustomField>
    <fullName>ENGPARTREV__c</fullName>
    <label>ENGPARTREV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>