force-app/main/default/objects/Part_Selector__c/fields/EnvelopeGasket__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeGasket__c</fullName>
    <label>EnvelopeGasket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>