force-app/main/default/objects/Part_Selector__c/fields/Existing_partnumber__c.field-meta.xml
<CustomField>
    <fullName>Existing_partnumber__c</fullName>
    <label>Existing partnumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>