force-app/main/default/objects/Part_Selector__c/fields/FaceDia__c.field-meta.xml
<CustomField>
    <fullName>FaceDia__c</fullName>
    <label>FaceDia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>