force-app/main/default/objects/Part_Selector__c/fields/FastenersIncl__c.field-meta.xml
<CustomField>
    <fullName>FastenersIncl__c</fullName>
    <label>FastenersIncl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>