force-app/main/default/objects/Part_Selector__c/fields/Force__c.field-meta.xml
<CustomField>
    <fullName>Force__c</fullName>
    <label>Force</label>
    <length>255</length>
    <type>Text</type>
</CustomField>