force-app/main/default/objects/Part_Selector__c/fields/GENOPT__c.field-meta.xml
<CustomField>
    <fullName>GENOPT__c</fullName>
    <label>GENOPT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>