force-app/main/default/objects/Part_Selector__c/fields/GMODEL_2__c.field-meta.xml
<CustomField>
    <fullName>GMODEL_2__c</fullName>
    <label>GMODEL-2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>