force-app/main/default/objects/Part_Selector__c/fields/GMODEL_3__c.field-meta.xml
<CustomField>
    <fullName>GMODEL_3__c</fullName>
    <label>GMODEL-3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>