force-app/main/default/objects/Part_Selector__c/fields/GMODEL_6__c.field-meta.xml
<CustomField>
    <fullName>GMODEL_6__c</fullName>
    <label>GMODEL-6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>