force-app/main/default/objects/Part_Selector__c/fields/GMODEL__c.field-meta.xml
<CustomField>
    <fullName>GMODEL__c</fullName>
    <label>GMODEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>