force-app/main/default/objects/Part_Selector__c/fields/GPAINT__c.field-meta.xml
<CustomField>
    <fullName>GPAINT__c</fullName>
    <label>GPAINT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>