force-app/main/default/objects/Part_Selector__c/fields/GPRSC1__c.field-meta.xml
<CustomField>
    <fullName>GPRSC1__c</fullName>
    <label>GPRSC1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>