force-app/main/default/objects/Part_Selector__c/fields/GTAG04__c.field-meta.xml
<CustomField>
    <fullName>GTAG04__c</fullName>
    <label>GTAG04</label>
    <length>255</length>
    <type>Text</type>
</CustomField>