force-app/main/default/objects/Part_Selector__c/fields/GTAG06__c.field-meta.xml
<CustomField>
    <fullName>GTAG06__c</fullName>
    <label>GTAG06</label>
    <length>255</length>
    <type>Text</type>
</CustomField>