force-app/main/default/objects/Part_Selector__c/fields/GVRSC1__c.field-meta.xml
<CustomField>
    <fullName>GVRSC1__c</fullName>
    <label>GVRSC1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>