force-app/main/default/objects/Part_Selector__c/fields/HCLASS__c.field-meta.xml
<CustomField>
    <fullName>HCLASS__c</fullName>
    <description>Holder Class</description>
    <label>HCLASS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>