force-app/main/default/objects/Part_Selector__c/fields/HSN_SAC_CODE__c.field-meta.xml
<CustomField>
    <fullName>HSN_SAC_CODE__c</fullName>
    <label>HSN_SAC_CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>