force-app/main/default/objects/Part_Selector__c/fields/INHOUSEPAINT__c.field-meta.xml
<CustomField>
    <fullName>INHOUSEPAINT__c</fullName>
    <label>INHOUSEPAINT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>