force-app/main/default/objects/Part_Selector__c/fields/INV_SERIAL_TRACKING__c.field-meta.xml
<CustomField>
    <fullName>INV_SERIAL_TRACKING__c</fullName>
    <label>INV_SERIAL_TRACKING</label>
    <length>255</length>
    <type>Text</type>
</CustomField>