force-app/main/default/objects/Part_Selector__c/fields/Is_managed_in_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Is_managed_in_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is managed in Salesforce?</label>
    <type>Checkbox</type>
</CustomField>