force-app/main/default/objects/Part_Selector__c/fields/Lead_Time_10_Override__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_10_Override__c</fullName>
    <label>Lead Time 10 Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>