force-app/main/default/objects/Part_Selector__c/fields/Lead_Time_Engineer_Override__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Engineer_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Time Engineer Override</label>
    <type>Checkbox</type>
</CustomField>