force-app/main/default/objects/Part_Selector__c/fields/LOTTRACKCODE__c.field-meta.xml
<CustomField>
    <fullName>LOTTRACKCODE__c</fullName>
    <label>LOTTRACKCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>