force-app/main/default/objects/Part_Selector__c/fields/MaxPres__c.field-meta.xml
<CustomField>
    <fullName>MaxPres__c</fullName>
    <label>MaxPres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>