force-app/main/default/objects/Part_Selector__c/fields/MCBODY__c.field-meta.xml
<CustomField>
    <fullName>MCBODY__c</fullName>
    <description>Input</description>
    <label>MCBODY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>