force-app/main/default/objects/Part_Selector__c/fields/MCBS__c.field-meta.xml
<CustomField>
    <fullName>MCBS__c</fullName>
    <label>MCBS</label>
    <length>18</length>
    <type>Text</type>
</CustomField>