force-app/main/default/objects/Part_Selector__c/fields/MCDPHM__c.field-meta.xml
<CustomField>
    <fullName>MCDPHM__c</fullName>
    <description>Material Code Diaphragm</description>
    <label>MCDPHM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>