force-app/main/default/objects/Part_Selector__c/fields/MCELMT__c.field-meta.xml
<CustomField>
    <fullName>MCELMT__c</fullName>
    <description>Material Code Element</description>
    <label>MCELMT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>