force-app/main/default/objects/Part_Selector__c/fields/MCENVG__c.field-meta.xml
<CustomField>
    <fullName>MCENVG__c</fullName>
    <label>MCENVG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>