force-app/main/default/objects/Part_Selector__c/fields/MCHOUS__c.field-meta.xml
<CustomField>
    <fullName>MCHOUS__c</fullName>
    <label>MCHOUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>