force-app/main/default/objects/Part_Selector__c/fields/MCPALL__c.field-meta.xml
<CustomField>
    <fullName>MCPALL__c</fullName>
    <description>Material Code Pallet</description>
    <label>MCPALL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>