force-app/main/default/objects/Part_Selector__c/fields/MCSEAT__c.field-meta.xml
<CustomField>
    <fullName>MCSEAT__c</fullName>
    <label>MCSEAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>