force-app/main/default/objects/Part_Selector__c/fields/MCSPRG__c.field-meta.xml
<CustomField>
    <fullName>MCSPRG__c</fullName>
    <label>MCSPRG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>