force-app/main/default/objects/Part_Selector__c/fields/MCWGHT__c.field-meta.xml
<CustomField>
    <fullName>MCWGHT__c</fullName>
    <label>MCWGHT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>