force-app/main/default/objects/Part_Selector__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Media</label>
    <length>255</length>
    <type>Text</type>
</CustomField>