force-app/main/default/objects/Part_Selector__c/fields/NEWSPCLPARTNOBASE__c.field-meta.xml
<CustomField>
    <fullName>NEWSPCLPARTNOBASE__c</fullName>
    <label>NEWSPCLPARTNOBASE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CD#TBA</fullName>
            </value>
            <value>
                <fullName>LD#TBA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>