force-app/main/default/objects/Part_Selector__c/fields/OA04__c.field-meta.xml
<CustomField>
    <fullName>OA04__c</fullName>
    <label>OA04</label>
    <length>255</length>
    <type>Text</type>
</CustomField>