force-app/main/default/objects/Part_Selector__c/fields/OA__c.field-meta.xml
<CustomField>
    <fullName>OA__c</fullName>
    <label>OA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>