force-app/main/default/objects/Part_Selector__c/fields/OB040__c.field-meta.xml
<CustomField>
    <fullName>OB040__c</fullName>
    <label>OB040</label>
    <length>255</length>
    <type>Text</type>
</CustomField>