force-app/main/default/objects/Part_Selector__c/fields/OnEngrHoldFlag__c.field-meta.xml
<CustomField>
    <fullName>OnEngrHoldFlag__c</fullName>
    <label>OnEngrHoldFlag</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>