force-app/main/default/objects/Part_Selector__c/fields/OW250__c.field-meta.xml
<CustomField>
    <fullName>OW250__c</fullName>
    <label>OW250</label>
    <length>255</length>
    <type>Text</type>
</CustomField>