force-app/main/default/objects/Part_Selector__c/fields/OW480__c.field-meta.xml
<CustomField>
    <fullName>OW480__c</fullName>
    <label>OW480</label>
    <length>255</length>
    <type>Text</type>
</CustomField>