force-app/main/default/objects/Part_Selector__c/fields/Part_Number_backend__c.field-meta.xml
<CustomField>
    <fullName>Part_Number_backend__c</fullName>
    <label>Part Number backend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>