force-app/main/default/objects/Part_Selector__c/fields/Part_Number_Base_Backup__c.field-meta.xml
<CustomField>
    <fullName>Part_Number_Base_Backup__c</fullName>
    <label>Part Number Base Backup</label>
    <length>100</length>
    <type>Text</type>
</CustomField>