force-app/main/default/objects/Part_Selector__c/fields/Partnumber_orginal__c.field-meta.xml
<CustomField>
    <fullName>Partnumber_orginal__c</fullName>
    <label>Partnumber orginal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>