force-app/main/default/objects/Part_Selector__c/fields/PARTUOM__c.field-meta.xml
<CustomField>
    <fullName>PARTUOM__c</fullName>
    <label>PARTUOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>