force-app/main/default/objects/Part_Selector__c/fields/PC411__c.field-meta.xml
<CustomField>
    <fullName>PC411__c</fullName>
    <label>PC411</label>
    <length>255</length>
    <type>Text</type>
</CustomField>