force-app/main/default/objects/Part_Selector__c/fields/PC420__c.field-meta.xml
<CustomField>
    <fullName>PC420__c</fullName>
    <label>PC420</label>
    <length>255</length>
    <type>Text</type>
</CustomField>