force-app/main/default/objects/Part_Selector__c/fields/PilotGas__c.field-meta.xml
<CustomField>
    <fullName>PilotGas__c</fullName>
    <label>PilotGas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>