force-app/main/default/objects/Part_Selector__c/fields/PILOTSOFTGOODS__c.field-meta.xml
<CustomField>
    <fullName>PILOTSOFTGOODS__c</fullName>
    <label>PILOTSOFTGOODS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>