force-app/main/default/objects/Part_Selector__c/fields/PipeClass__c.field-meta.xml
<CustomField>
    <fullName>PipeClass__c</fullName>
    <label>PipeClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>