force-app/main/default/objects/Part_Selector__c/fields/PortLoading__c.field-meta.xml
<CustomField>
    <fullName>PortLoading__c</fullName>
    <label>PortLoading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>