force-app/main/default/objects/Part_Selector__c/fields/PosSetCode__c.field-meta.xml
<CustomField>
    <fullName>PosSetCode__c</fullName>
    <label>PosSetCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>