force-app/main/default/objects/Part_Selector__c/fields/Power__c.field-meta.xml
<CustomField>
    <fullName>Power__c</fullName>
    <label>Power</label>
    <length>255</length>
    <type>Text</type>
</CustomField>