force-app/main/default/objects/Part_Selector__c/fields/PressureCode__c.field-meta.xml
<CustomField>
    <fullName>PressureCode__c</fullName>
    <label>PressureCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>