force-app/main/default/objects/Part_Selector__c/fields/Price_Total__c.field-meta.xml
<CustomField>
    <fullName>Price_Total__c</fullName>
    <label>Price Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>