force-app/main/default/objects/Part_Selector__c/fields/Product_Attribute_Data__c.field-meta.xml
<CustomField>
    <fullName>Product_Attribute_Data__c</fullName>
    <label>Product Attribute Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>