force-app/main/default/objects/Part_Selector__c/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <label>ProductGroup</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand_picklist__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sanitary Accessories</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>BDI Accessories</fullName>
            </value>
            <value>
                <fullName>Flame Check</fullName>
            </value>
            <value>
                <fullName>Fluid-Trol</fullName>
            </value>
            <value>
                <fullName>Free Vent</fullName>
            </value>
            <value>
                <fullName>Manometer</fullName>
            </value>
            <value>
                <fullName>Pipe Accessories</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Replacement Parts</fullName>
            </value>
            <value>
                <fullName>Tank Hatch</fullName>
            </value>
            <value>
                <fullName>Trap</fullName>
            </value>
            <value>
                <fullName>Valve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>