force-app/main/default/objects/Part_Selector__c/fields/Prospectus_Item__c.field-meta.xml
<CustomField>
    <fullName>Prospectus_Item__c</fullName>
    <formula>IF ( AND (  Lead_Time_Engineer_Override__c = FALSE,  Quote_Line__r.Leadtime__c &lt; 4995), &quot;Prospectus &lt; 4995&quot; , &quot;Not Prospectus (4995)&quot;)</formula>
    <label>Prospectus Item</label>
    <type>Text</type>
</CustomField>