force-app/main/default/objects/Part_Selector__c/fields/PROVIDE__c.field-meta.xml
<CustomField>
    <fullName>PROVIDE__c</fullName>
    <label>PROVIDE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>