force-app/main/default/objects/Part_Selector__c/fields/PTC__c.field-meta.xml
<CustomField>
    <fullName>PTC__c</fullName>
    <description>Product Type Code</description>
    <label>PTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>