force-app/main/default/objects/Part_Selector__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Part Selectors</relationshipLabel>
    <relationshipName>Part_Selectors</relationshipName>
    <type>Lookup</type>
</CustomField>