force-app/main/default/objects/Part_Selector__c/fields/RESPONSIBLE_ID__c.field-meta.xml
<CustomField>
    <fullName>RESPONSIBLE_ID__c</fullName>
    <label>RESPONSIBLE_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>