force-app/main/default/objects/Part_Selector__c/fields/SALESGROUP__c.field-meta.xml
<CustomField>
    <fullName>SALESGROUP__c</fullName>
    <label>SALESGROUP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>