force-app/main/default/objects/Part_Selector__c/fields/SETTING__c.field-meta.xml
<CustomField>
    <fullName>SETTING__c</fullName>
    <label>SETTING</label>
    <length>255</length>
    <type>Text</type>
</CustomField>