force-app/main/default/objects/Part_Selector__c/fields/SightGlassCode__c.field-meta.xml
<CustomField>
    <fullName>SightGlassCode__c</fullName>
    <label>SightGlassCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>