force-app/main/default/objects/Part_Selector__c/fields/SoftGoods__c.field-meta.xml
<CustomField>
    <fullName>SoftGoods__c</fullName>
    <label>SoftGoods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>