force-app/main/default/objects/Part_Selector__c/fields/SPRING__c.field-meta.xml
<CustomField>
    <fullName>SPRING__c</fullName>
    <label>SPRING</label>
    <length>255</length>
    <type>Text</type>
</CustomField>