force-app/main/default/objects/Part_Selector__c/fields/SubGroup__c.field-meta.xml
<CustomField>
    <fullName>SubGroup__c</fullName>
    <label>Sub-Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>