force-app/main/default/objects/Part_Selector__c/fields/SZCInlet__c.field-meta.xml
<CustomField>
    <fullName>SZCInlet__c</fullName>
    <label>SZCInlet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>