force-app/main/default/objects/Part_Selector__c/fields/SZCOutlet__c.field-meta.xml
<CustomField>
    <fullName>SZCOutlet__c</fullName>
    <label>SZCOutlet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>