force-app/main/default/objects/Part_Selector__c/fields/TubeMatl__c.field-meta.xml
<CustomField>
    <fullName>TubeMatl__c</fullName>
    <label>TubeMatl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>