force-app/main/default/objects/Part_Selector__c/fields/VacSetCode__c.field-meta.xml
<CustomField>
    <fullName>VacSetCode__c</fullName>
    <label>VacSetCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>