force-app/main/default/objects/Part_Selector__c/fields/VENDORPAINT__c.field-meta.xml
<CustomField>
    <fullName>VENDORPAINT__c</fullName>
    <label>VENDORPAINT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>