force-app/main/default/objects/Part_Selector__c/validationRules/Part_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Part_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
IF(Product_GroupText__c = &apos;Enter Part Number&apos;, true, false),
ISBLANK(PartNum__c),
Product_Selection_Flag__c
)</errorConditionFormula>
    <errorMessage>Part Number: Please Enter a Value</errorMessage>
</ValidationRule>