force-app/main/default/objects/Part_Selector__c/validationRules/Product_Group_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Group_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Product_GroupText__c), 
Product_Selection_Flag__c
)</errorConditionFormula>
    <errorMessage>Product Group: Please Enter a Value</errorMessage>
</ValidationRule>