force-app/main/default/objects/Part_Selector__c/validationRules/Quantity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNULL(Quantity__c), Product_Selection_Flag__c)</errorConditionFormula>
    <errorMessage>Quantity: Please Enter a Value</errorMessage>
</ValidationRule>