force-app/main/default/objects/Part_Selector__c/validationRules/SubGroup_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SubGroup_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
IF(Product_GroupText__c != &apos;Enter Part Number&apos;, true, false),
ISBLANK(SubGroup__c),
Product_Selection_Flag__c 
)</errorConditionFormula>
    <errorMessage>Sub-Group: Please Enter a Value</errorMessage>
</ValidationRule>