force-app/main/default/objects/Part_Selector__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quote_Line__c</columns>
    <columns>ASSYPARTNO__c</columns>
    <columns>ASSYPARTEXISTING__c</columns>
    <columns>ASSYPARTNOBASE__c</columns>
    <columns>Part_Number_Base__c</columns>
    <columns>ASSYPARTNODESC__c</columns>
    <columns>ASSYPARTNOSEQ__c</columns>
    <columns>Part_Number__c</columns>
    <columns>Part_Number_Backup__c</columns>
    <columns>Part_Number_Base_Backup__c</columns>
    <columns>PartNum__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>